--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="./css/style.css" />
     <!-- Latest compiled and minified CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <!-- Bootstrap Link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- goole Montserrat  font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -54,8 +56,44 @@
             <h1>Reported posts</h1>
         </div>
     </main>
-    <footer></footer>
+    <section class="container pb-5">
+        <h1>Question:</h1>
 
+        <p>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                How does javaScript work?
+            </a>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample2" role="button" aria-expanded="false" aria-controls="collapseExample">
+                What does javaScript event loop do?
+            </a>
+            <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapseExample3" role="button" aria-expanded="false" aria-controls="collapseExample">
+                Local storage and session storage difference?
+            </a>
+
+        </p>
+        <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+                JavaScript is a type of programming language. It basically works by v8 engine. We are pouring our JavaScript code as input and the v8 engine is processing our code well and showing our output in the browser.v8 The engine performs these 4 steps after receiving
+                any code input 1. parsing 2. compiling 3. executing and 4, optimizing shows our output in browser.
+            </div>
+        </div>
+        <div class="collapse" id="collapseExample2">
+            <div class="card card-body">
+                JavaScript has two types of events: 1. synchronous events 2. asynchronous events. Event loops usually deal with asynchronous events. Whenever an async function or event is called, it is sent to a browser API. Based on the command received from the call
+                stack, the API starts its own single-threaded operation. An example of this is the setTimeout method.
+            </div>
+        </div>
+        <div class="collapse" id="collapseExample3">
+            <div class="card card-body">
+                Session storage is temporary which exists as long as the current window is opened and data gets lost when window is closed where as Local Storage is persistant and remains intact across sessions unless anyone deletes it.
+
+            </div>
+        </div>
+
+    </section>
+    <footer></footer>
+    <!-- Bootstrap link -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <!-- add javascript  file  -->
     <script src="./js/app.js"></script>
 </body>
