--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <h1>Reported posts</h1>
         </div>
     </main>
+    <!-- Question Section -->
     <section class="container pb-5">
         <h1>Question:</h1>
 
