--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
         </div>
         <div class="collapse" id="collapseExample3">
             <div class="card card-body">
-                Session storage is temporary which exists as long as the current window is opened and data gets lost when window is closed where as Local Storage is persistant and remains intact across sessions unless anyone deletes it.
+                Session storage is temporary which exists as long as the current window is opened and data gets lost when window is closed where as Local Storage is persistant and remains intact across sessions unless anyone deletes it. A new session is created each
+                time a window or tab is opened. Closing a window or tab ends the session
 
             </div>
         </div>
